# retropico2

./: .gitignore  CMakeLists.txt  README.md
src/: app.cpp  app.h  config.cpp  config.h  filer.cpp  filer.h  main.cpp  menu.cpp  menu.h  retrowidget.cpp  retrowidget.h
src/libretro/: retroloader.cpp  retroloader.h
src/shaders/: libretro_xrgb.cpp
src/utility/: utility.cpp  utility.h
src/widgets/: retrowidget.cpp  retrowidget.h
